# LearnedIndex

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/LIndex/: Binseca.h  IntervalTree.h  LIndex.h  LIndexModelSet.h  LIndex_model.h  LIndex_model_impl.h  LIndex_model_set.h  Lindex.h  binseca.h
src/: LIndex_model_impl.h  LIndex_model_impl.hpp  main.cpp
src/data/: DEXSZUS.csv
